--- a/estimate_top500_computers/estimation.ipynb
+++ b/estimate_top500_computers/estimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,13 @@
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perfomance prediction TOP-500"
    ]
   },
   {
@@ -453,6 +460,348 @@
     "```\n",
     "Prediction [2025-05-01] perfomance for Top-1 is: 3.2 EFlop/s\n",
     "Prediction [2025-10-01] perfomance for Top-1 is: 3.9 EFlop/s \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Energy consumption by TOP-500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Previous Rank</th>\n",
+       "      <th>First Appearance</th>\n",
+       "      <th>First Rank</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Computer</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Accelerator/Co-Processor</th>\n",
+       "      <th>Cores per Socket</th>\n",
+       "      <th>Processor Generation</th>\n",
+       "      <th>System Model</th>\n",
+       "      <th>System Family</th>\n",
+       "      <th>Interconnect Family</th>\n",
+       "      <th>Interconnect</th>\n",
+       "      <th>Continent</th>\n",
+       "      <th>Site ID</th>\n",
+       "      <th>System ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Supercomputer Fugaku</td>\n",
+       "      <td>Supercomputer Fugaku, A64FX 48C 2.2GHz, Tofu i...</td>\n",
+       "      <td>RIKEN Center for Computational Science</td>\n",
+       "      <td>Fujitsu</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Fujitsu A64FX</td>\n",
+       "      <td>Supercomputer Fugaku</td>\n",
+       "      <td>Fujitsu Cluster</td>\n",
+       "      <td>Proprietary Network</td>\n",
+       "      <td>Tofu interconnect D</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>50 831</td>\n",
+       "      <td>179807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summit</td>\n",
+       "      <td>IBM Power System AC922, IBM POWER9 22C 3.07GHz...</td>\n",
+       "      <td>DOE/SC/Oak Ridge National Laboratory</td>\n",
+       "      <td>IBM</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NVIDIA Volta GV100</td>\n",
+       "      <td>22</td>\n",
+       "      <td>IBM POWER9</td>\n",
+       "      <td>IBM Power System AC922</td>\n",
+       "      <td>IBM Power Systems</td>\n",
+       "      <td>Infiniband</td>\n",
+       "      <td>Dual-rail Mellanox EDR Infiniband</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>48 553</td>\n",
+       "      <td>179397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sierra</td>\n",
+       "      <td>IBM Power System AC922, IBM POWER9 22C 3.1GHz,...</td>\n",
+       "      <td>DOE/NNSA/LLNL</td>\n",
+       "      <td>IBM / NVIDIA / Mellanox</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NVIDIA Volta GV100</td>\n",
+       "      <td>22</td>\n",
+       "      <td>IBM POWER9</td>\n",
+       "      <td>IBM Power System AC922</td>\n",
+       "      <td>IBM Power Systems</td>\n",
+       "      <td>Infiniband</td>\n",
+       "      <td>Dual-rail Mellanox EDR Infiniband</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>49 763</td>\n",
+       "      <td>179398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sunway TaihuLight</td>\n",
+       "      <td>Sunway MPP, Sunway SW26010 260C 1.45GHz, Sunway</td>\n",
+       "      <td>National Supercomputing Center in Wuxi</td>\n",
+       "      <td>NRCPC</td>\n",
+       "      <td>China</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>260</td>\n",
+       "      <td>Sunway</td>\n",
+       "      <td>Sunway MPP</td>\n",
+       "      <td>Sunway Cluster</td>\n",
+       "      <td>Custom Interconnect</td>\n",
+       "      <td>Sunway</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>50 623</td>\n",
+       "      <td>178764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Perlmutter</td>\n",
+       "      <td>HPE Cray EX235n, AMD EPYC 7763 64C 2.45GHz, NV...</td>\n",
+       "      <td>DOE/SC/LBNL/NERSC</td>\n",
+       "      <td>HPE</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NVIDIA A100 SXM4 40 GB</td>\n",
+       "      <td>64</td>\n",
+       "      <td>AMD Milan</td>\n",
+       "      <td>HPE Cray EX235n</td>\n",
+       "      <td>HPE Cray EX</td>\n",
+       "      <td>Gigabit Ethernet</td>\n",
+       "      <td>Slingshot-10</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>48 429</td>\n",
+       "      <td>179972</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank  Previous Rank  First Appearance  First Rank                  Name  \\\n",
+       "0     1            1.0                55           1  Supercomputer Fugaku   \n",
+       "1     2            2.0                51           1                Summit   \n",
+       "2     3            3.0                51           3                Sierra   \n",
+       "3     4            4.0                47           1     Sunway TaihuLight   \n",
+       "4     5            NaN                57           5            Perlmutter   \n",
+       "\n",
+       "                                            Computer  \\\n",
+       "0  Supercomputer Fugaku, A64FX 48C 2.2GHz, Tofu i...   \n",
+       "1  IBM Power System AC922, IBM POWER9 22C 3.07GHz...   \n",
+       "2  IBM Power System AC922, IBM POWER9 22C 3.1GHz,...   \n",
+       "3    Sunway MPP, Sunway SW26010 260C 1.45GHz, Sunway   \n",
+       "4  HPE Cray EX235n, AMD EPYC 7763 64C 2.45GHz, NV...   \n",
+       "\n",
+       "                                     Site             Manufacturer  \\\n",
+       "0  RIKEN Center for Computational Science                  Fujitsu   \n",
+       "1    DOE/SC/Oak Ridge National Laboratory                      IBM   \n",
+       "2                           DOE/NNSA/LLNL  IBM / NVIDIA / Mellanox   \n",
+       "3  National Supercomputing Center in Wuxi                    NRCPC   \n",
+       "4                       DOE/SC/LBNL/NERSC                      HPE   \n",
+       "\n",
+       "         Country  Year  ... Accelerator/Co-Processor Cores per Socket  \\\n",
+       "0          Japan  2020  ...                     None               48   \n",
+       "1  United States  2018  ...       NVIDIA Volta GV100               22   \n",
+       "2  United States  2018  ...       NVIDIA Volta GV100               22   \n",
+       "3          China  2016  ...                     None              260   \n",
+       "4  United States  2021  ...   NVIDIA A100 SXM4 40 GB               64   \n",
+       "\n",
+       "  Processor Generation            System Model       System Family  \\\n",
+       "0        Fujitsu A64FX    Supercomputer Fugaku     Fujitsu Cluster   \n",
+       "1           IBM POWER9  IBM Power System AC922   IBM Power Systems   \n",
+       "2           IBM POWER9  IBM Power System AC922   IBM Power Systems   \n",
+       "3               Sunway              Sunway MPP      Sunway Cluster   \n",
+       "4            AMD Milan         HPE Cray EX235n         HPE Cray EX   \n",
+       "\n",
+       "   Interconnect Family                       Interconnect      Continent  \\\n",
+       "0  Proprietary Network                Tofu interconnect D           Asia   \n",
+       "1           Infiniband  Dual-rail Mellanox EDR Infiniband  North America   \n",
+       "2           Infiniband  Dual-rail Mellanox EDR Infiniband  North America   \n",
+       "3  Custom Interconnect                             Sunway           Asia   \n",
+       "4     Gigabit Ethernet                       Slingshot-10  North America   \n",
+       "\n",
+       "  Site ID System ID  \n",
+       "0  50 831    179807  \n",
+       "1  48 553    179397  \n",
+       "2  49 763    179398  \n",
+       "3  50 623    178764  \n",
+       "4  48 429    179972  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_500_df = pd.read_csv(\"TOP500_202106.csv\",delimiter=';')\n",
+    "top_500_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head_uo = top_500_df['Power (kW)'].head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_consumption_df = (\n",
+    "    top_500_df[\"Power (kW)\"]\n",
+    "    .str.replace(\",\", \".\")\n",
+    "    .replace(\"[^0-9\\.]\", \"\", regex=True)\n",
+    "    .fillna(0)\n",
+    "    .astype(float)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "343999.8"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_consumption_top_500 = energy_consumption_df.sum()\n",
+    "energy_consumption_top_500\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3061986301.369863"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hours = 365 * 24\n",
+    "world_enegy = 26823 * (10 ** 9)\n",
+    "world_enegy_hour = world_enegy / hours\n",
+    "world_enegy_hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011234530992059052"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(energy_consumption_top_500 / world_enegy_hour) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Energy consumption by TOP-500 approximately 1.12% \n",
     "```"
    ]
   }
