--- a/estimate_top500_computers/estimation.ipynb
+++ b/estimate_top500_computers/estimation.ipynb
@@ -710,15 +710,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "head_uo = top_500_df['Power (kW)'].head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -778,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +778,7 @@
        "0.011234530992059052"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +792,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "Energy consumption by TOP-500 approximately 1.12% \n",
+    "Energy consumption by TOP-500 approximately is 1.12% \n",
     "```"
    ]
   }
